--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongodb": "^4.0.6",
+    "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -25,7 +26,8 @@
     "react-dom": "19.2.0",
     "react-select": "^5.10.2",
     "react-snowfall": "^2.4.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
