--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongodb": "^4.0.6",
     "@types/nodemailer": "^6.4.14",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -27,7 +28,8 @@
     "react-select": "^5.10.2",
     "react-snowfall": "^2.4.0",
     "xlsx": "^0.18.5",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
