Revert "Merge pull request #15 from Urvann-admin/feature-harsh-category-automation"
This reverts commit 307ec64ef32115e937fb54f0eedd5edbbadf3a28, reversing
changes made to 13623f7d25f312683777217d34d72d561ae31dc2.

--- a/package.json
+++ b/package.json
@@ -11,16 +11,11 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/extension-link": "^3.19.0",
-    "@tiptap/extension-placeholder": "^3.19.0",
-    "@tiptap/extension-underline": "^3.19.0",
-    "@tiptap/react": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongodb": "^4.0.6",
-    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -28,13 +23,13 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "next": "16.0.0",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-select": "^5.10.2",
     "react-snowfall": "^2.4.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "nodemailer": "^6.9.8",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
